# wiimote-control

./: CLAUDE.md  DONE  LICENSE  README.md  Wiimote Controls.md  plan.md  progress.md  pyproject.toml  report.md  test_daemon.py  test_keypress.py  wiimote_daemon.py
esp32/wiimote_bridge/: wiimote_bridge.ino
learnings/: cycle-01-learning.md  cycle-08-learning.md  cycle-09-learning.md  cycle-11-learning.md  cycle-12-learning.md  cycle-13-learning.md  cycle-14-learning.md  cycle-15-learning.md  cycle-16-learning.md
reviews/: cycle-01-plan-review.md  cycle-01-work-review.md  cycle-08-plan-review.md  cycle-08-work-review.md  cycle-09-plan-review.md  cycle-09-work-review.md  cycle-11-plan-review.md  cycle-11-work-review.md  cycle-12-work-review.md  cycle-13-plan-review.md  cycle-13-work-review.md
test-results/: cycle-08-test.md
